--- a/static/css/style.css
+++ b/static/css/style.css
@@ -1,37 +1,343 @@
-* {
-    padding: 0;
-    margin: 0;
-    box-sizing: border-box;
-}
-
 body {
-    background: #f0f0f0;
+    scroll-behavior: smooth;
+    align-items: center;
+    width: 100%;
+    max-width: 1366px;
+    margin: auto;
+    font-family: 'Inter', 'Work Sans', "NunitoSans-Light", Arial, Helvetica, sans-serif;
 }
 
-.form {
-    position: fixed;
-    top: 50%;
-    left: 50%;
+.section {
+    margin: 0 auto;
+    max-width: 1366px;
+}
+
+* {
+    margin: 0;
+    padding: 0;
+}
+.header {
+    margin-left: 59px;
+    margin-right: 92px;
+}
+.section-header {
+    justify-content: space-between;
+    height: 83px;
+    width: 100%;
+    display: flex;
+    align-items: center;
+}
+.logo {
+    width: 84px;
+    height: auto;
+}
+.header-nav {
+    display: flex;
+    list-style-type: none;
+}
+.link {
+    text-decoration: none;
+    /* cursor: pointer; */
+    font-family: 'Inter';
+    font-weight: 500;
+    font-size: 16px;
+    line-height: 19px;
+    color: #000000;
+}
+.header-nav li {
+    margin-right: 35px;
+}
+
+.HOME {
+    margin-top: 64px;
+    margin-left: 93px;
+    margin-right: 92px;
+}
+.section-home {
+    align-items: center;
+    display: flex;
+    justify-content: space-between;
+    margin-top: -90px;
+}
+
+
+.title {
+    font-family: 'Work Sans';
+    font-style: normal;
+    font-weight: 600;
+    font-size: 40px;
+    line-height: 48px;
+    display: flex;
+    align-items: center;
+    letter-spacing: 0.02em;
+    text-transform: uppercase;
+}
+.home_p {
+    font-family: 'Work Sans';
+    font-style: normal;
+    font-weight: 400;
+    font-size: 20px;
+    line-height: 24px;
+    margin-top: 43px;
+}
+
+.home_ul {
+    margin-top: 35px;
+}
+.home_li {
+    list-style-type: none;
+    margin-top: 12px;
+    font-family: 'Inter';
+    font-style: normal;
+    font-weight: 400;
+    font-size: 16px;
+    line-height: 20px;
+}
+
+.check {
+    margin-bottom: -7px;
+    margin-right: 16px;
+}
+
+.buttonsHome {
+    margin-top: 68px;
+}
+.button_home {
+    background: #FBC815;
+    border-radius: 50px;
+    width: 267px;
+    height: 56px;
+    font-family: 'Inter';
+    font-style: normal;
+    font-weight: 700;
+    font-size: 20px;
+    line-height: 24px;
+    border: 0;
+}
+
+.image-home {
+    width: 747px;
+    height: 496px;
+    z-index: -1;
+}
+
+.title_2 {
+    display: block;
+    margin-top: 160px;
+    text-transform: none;
+    font-family: 'Work Sans';
+    font-style: normal;
+    font-weight: 800;
+    font-size: 36px;
+    line-height: 48px;
+    align-items: center;
+    text-align: center;
+}
+
+.section-home-2 {
+    align-items: center;
+    display: flex;
+    justify-content: space-around;
+    margin-top: 20px;
+}
+
+.home-text {
+    width: 490px;
+}
+
+.p-text {
+    margin-top: 32px;
+}
+
+.ADVAN_TEST {
+    background: #4F68BB;
+    color: white;
+    height: 712px;
+    padding-top: 63px;
+    margin-top: 160px;
+}
+
+.content_img {
+    margin-top: -147px;
+    text-align: end;
+    margin-right: 50px;
+}
+
+.content-ADVAN_TEST {
+    display: flex;
+    justify-content: space-evenly;
+    margin-top: 75px;
+}
+
+.text_test {
+    margin-top: 63px;
+}
+
+.test-info {
     width: 300px;
-    transform: translate(-50%, -50%);
-    background-color: #fff;
-    padding: 20px;
+}
+
+
+
+.title_3 {
+    display: block;
+    text-transform: none;
+    font-family: 'Work Sans';
+    font-style: normal;
+    font-weight: 800;
+    font-size: 36px;
+    line-height: 48px;
+    align-items: center;
+    text-align: center;
+}
+
+.advan-test {
+    margin: 30px 0 30px 0;
+    font-style: normal;
+    font-weight: 700;
+    font-size: 24px;
+    line-height: 32px;
+}
+
+.advan-test-p {
+    font-style: normal;
+    font-weight: 400;
+    font-size: 18px;
+    line-height: 24px;
+}
+
+.advan-test-p-2 {
+    margin: 65px 0 0 115px;
+    max-width: 1117px;
+}
+
+.container {
     display: grid;
-    row-gap: 15px;
-    border-radius: 10px;
-    box-shadow: 4px 4px 20px #ccc;
+    grid-template-columns: repeat(3, 295px);
+    justify-items: stretch;
+    justify-content: space-around;;
+    grid-template-rows: 100px 100px 100px;
+    row-gap:  280px;
+    margin-top: -30px;
 }
 
-.form > input,
-.form > button {
-    border: 1px solid #ccc;
-    border-radius: 4px;
-    padding: 5px;
-    outline: none;
+.text_test img {
+    margin-left: 700px;
 }
 
-.form > button:hover {
-    background-color: #ccc;
+.container-box h3 {
+    font-style: normal;
+    font-weight: 700;
+    font-size: 32px;
+    line-height: 36px;
+}
+
+.container-box-p {
+    font-style: normal;
+    font-weight: 700;
+    font-size: 24px;
+    line-height: 32px;
+    margin: 25px 0 15px 0;
+}
+
+.container-box-p2 {
+    font-style: normal;
+    font-weight: 400;
+    font-size: 16px;
+    line-height: 24px;
+}
+
+.box-1 img {
+    display: block;
+    position: inherit;
+    margin-left:195px;
+    margin-top: 30px;
+}
+
+.box-4 img {
+    margin-left: 180px;
+}
+
+.box-5 img {
+    display: block;
+    margin-left: 335px;
+    margin-top: -199px;
+}
+
+.button {
+    text-align: center;
+    background: #F03F5A;
     cursor: pointer;
+    border-radius: 30px;
+    border: 0;
 }
 
+.TEST {
+    background-color: #FBCDA6;
+    height: 352px;
+}
+
+.test_button {
+    margin-top: 30px;
+    width: 267px;
+    height: 56px;
+    font-family: 'Inter';
+    font-style: normal;
+    font-weight: 700;
+    font-size: 20px;
+    line-height: 24px;
+}
+
+.test-now {
+    display: flex;
+    justify-content: space-between;
+    margin-left: 89px;
+}
+
+.test-now-text {
+    text-align: center;
+    margin-top: 82px;
+}
+
+.test-now-img {
+    margin-top: -93px;
+}
+
+.FOOTER {
+    background: #4F68BB;
+    height: 232px;
+    color: #C9C9C9;
+}
+
+.footer-logo-p {
+    margin-top: -65px;
+    margin-left: 74px;
+}
+
+.footer-logo-p2 {
+    margin-top: 16px;
+    margin-left: 74px;
+}
+
+
+.section-footer {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    max-width: 1200px;
+}
+.footer-nav {
+    display: grid;
+    list-style-type: none;
+    line-height: 2.5;
+}
+
+.footer-link {
+    text-decoration: none;
+    font-family: 'Inter';
+    font-weight: 500;
+    font-size: 16px;
+    line-height: 19px;
+    color: #C9C9C9;
+    list-style-type: none;
+}
