--- a/templates/name.html
+++ b/templates/name.html
@@ -9,14 +9,14 @@
     <title>Document</title>
 </head>
 <body>
-    <form class="NAME_LOGO" action="./next_test">
+    <form class="NAME_LOGO" action="./next_test" method="post">
         <div class="Name-logo">
             <img src="./static/img/Иконка _Лого_ (1).svg">
             <a href="./"><img src="./static/img/Vector (4).jpg"></a>
         </div>
         <div class="name">
             <label class="label">Введите своё имя, чтобы мы знали, как к<br> Вам обращаться
-            <input class="text-input" type="text" maxlength="255" minlength="2" placeholder="    Имя"></label>
+            <input name="name" class="text-input" type="text" maxlength="255" minlength="2" placeholder="    Имя"></label>
             <p>0 из 255 символов (минимум 2)</p>
         </div>       
         <div class="button">
