--- a/templates/name.html
+++ b/templates/name.html
@@ -6,7 +6,8 @@
     <meta name="viewport" content="width=\, initial-scale=1.0">
     <link href="./static/css/name.css" rel="stylesheet" type="text/css">
     <link href="./static/css/fonts.css" rel="stylesheet" type="text/css">
-    <title>Document</title>
+    <link rel="icon" sizes="16x16" href="./static/img/Иконка _Лого_ (1_1).svg" type="image/x-icon">
+    <title>Dandelions</title>
 </head>
 <body>
     <form class="NAME_LOGO" action="./next_test" method="post">
@@ -18,7 +19,7 @@
             <label class="label">Введите своё имя, чтобы мы знали, как к<br> Вам обращаться
             <input name="name" class="text-input" type="text" maxlength="255" minlength="2" placeholder="    Имя"></label>
             <p>0 из 255 символов (минимум 2)</p>
-        </div>       
+        </div>
         <div class="button">
                 <button class="button submit_button">Продолжить</button>
         </div>
