Логика записи ответов на вопросы++

--- a/templates/next_test.html
+++ b/templates/next_test.html
@@ -20,7 +20,7 @@
             {{range .}}
 
             <input type="hidden" name="name" value="{{.User}}">
-            <input type="hidden" name="id" value="{{.Id}}">
+            <input type="hidden" name="id" value="{{.TestStart}}">
 
             {{end}}
 
