--- a/templates/test.html
+++ b/templates/test.html
@@ -33,7 +33,7 @@
             <h2 id="question">{{.Question}}</h2>
             <ul>
                 <li>
-                    <input type="hidden" value="{{.User}}" name="name">
+                    <input type="hidden" value="{{.TestId}}" name="id">
                 </li>
 
                 <li>
