--- a/templates/name.html
+++ b/templates/name.html
@@ -17,7 +17,7 @@
         </div>
         <div class="name">
             <label class="label">Введите своё имя, чтобы мы знали, как к<br> Вам обращаться
-            <input name="name" class="text-input" type="text" maxlength="255" minlength="2" placeholder="    Имя"></label>
+            <input required="" name="name" class="text-input" type="text" maxlength="255" minlength="2" placeholder="    Имя"></label>
             <p>0 из 255 символов (минимум 2)</p>
         </div>
         <div class="button">
