фикс перед обновлением фронта

--- a/templates/test.html
+++ b/templates/test.html
@@ -45,6 +45,9 @@
                 <li>
                     <input type="hidden" value="{{.TestId}}" name="id">
                 </li>
+                <li>
+                    <input type="hidden" value="{{.Id}}" name="questionid">
+                </li>
 
                 <li>
                     <input type="hidden" value="{{.Question}}" name="question">
