--- a/templates/next_test.html
+++ b/templates/next_test.html
@@ -12,7 +12,10 @@
     <form class="NAME_LOGO" action="./test" method="post">
         <div class="Name-logo">
             <img src="./static/img/Иконка _Лого_ (1).svg">
-            <a href="./"><img src="./static/img/Vector (4).jpg"></a>
+            <img class="Name-logo-img1" src="./static/img/Ellipse 6 (2).svg">
+            <a href="./Index.html"><img class="Name-logo-img" src="./static/img/Vector (5).svg"></a>
+{{/*            <img src="./static/img/Иконка _Лого_ (1).svg">*/}}
+{{/*            <a href="./"><img src="./static/img/Vector (4).jpg"></a>*/}}
         </div>
         <div class="info">
             <p>Добро пожаловать!<br>Вы собираетесь начать тест</p>
