Предварительный реализ на демонстрацию

--- a/templates/test.html
+++ b/templates/test.html
@@ -19,8 +19,8 @@
             </div>
             <nav>
                 <ul class="header-nav">
-                    <li><a class="link" href="#ADVAN_TEST">Преимущества теста</a></li>
-                    <li><a class="link" href="#LANGUAGE_LEVELS">Уровни знания языка</a></li>
+                    <li><a class="link" href="/">Преимущества теста</a></li>
+                    <li><a class="link" href="/">Уровни знания языка</a></li>
                     <li><a class="link" href="#">Свяжитесь с нами</a></li>
                 </ul>
             </nav>
