--- a/templates/next_test.html
+++ b/templates/next_test.html
@@ -13,9 +13,7 @@
         <div class="Name-logo">
             <img src="./static/img/Иконка _Лого_ (1).svg">
             <img class="Name-logo-img1" src="./static/img/Ellipse 6 (2).svg">
-            <a href="./Index.html"><img class="Name-logo-img" src="./static/img/Vector (5).svg"></a>
-{{/*            <img src="./static/img/Иконка _Лого_ (1).svg">*/}}
-{{/*            <a href="./"><img src="./static/img/Vector (4).jpg"></a>*/}}
+            <a href="./"><img class="Name-logo-img" src="./static/img/Vector (5).svg"></a>
         </div>
         <div class="info">
             <p>Добро пожаловать!<br>Вы собираетесь начать тест</p>
