--- a/templates/Index.html
+++ b/templates/Index.html
@@ -7,7 +7,7 @@
     <link href="./static/css/style.css" rel="stylesheet" type="text/css">
     <link href="./static/css/fonts.css" rel="stylesheet" type="text/css">
     <link rel="icon" sizes="16x16" href="./static/img/Иконка _Лого_ (1_1).svg" type="image/x-icon">
-    <title>Dandelions</title>
+    <title>Vorobeyenglish</title>
 </head>
 <body>
 <!-- <script src="./js/scrollButton.js"></script> -->
@@ -22,6 +22,7 @@
                     <li><a class="link" href="#ADVAN_TEST">Преимущества теста</a></li>
                     <li><a class="link" href="#LANGUAGE_LEVELS">Уровни знания языка</a></li>
                     <li><a class="link" href="#FOOTER">Свяжитесь с нами</a></li>
+                    <li><a class="link" href="#">О проекте</a></li>
                 </ul>
             </nav>
         </div>
@@ -205,17 +206,21 @@
     </div>
 </footer>
 </body>
-<script>
-    const goTopBtn = document.querySelector(".button");
+<!-- <script>
+const goTopBtn = document.querySelector(".button");
 
-    goTopBtn.addEventListener("click", goTop);
+goTopBtn.addEventListener("click", goTop);
 
-    function goTop() {
+function goTop() {
 
-        if (window.pageYOffset > 0) {
-            window.scrollBy(0, -10); // второй аргумент - скорость
-            setTimeout(goTop, 0); // входим в рекурсию
-        }
-    }
-</script>
+  if (window.pageYOffset > 0) {
+    window.scrollBy(0, -10); // второй аргумент - скорость
+    setTimeout(goTop, 0); // входим в рекурсию
+  }
+}
+
+$(function() {
+
+});
+</script> -->
 </html>
