--- a/static/css/name.css
+++ b/static/css/name.css
@@ -4,6 +4,7 @@ body {
     max-width: 1366px;
     margin: auto;
     font-family: 'Inter', 'Work Sans', "NunitoSans-Light", Arial, Helvetica, sans-serif;
+    background: #4F68BB;
 }
 
 * {
@@ -12,12 +13,26 @@ body {
 }
 
 .NAME_LOGO {
-    width: 724px;
-    height: 602px;
+    width: 560px;
+    height: 480px;
     position: fixed; top: 50%; left: 50%;
     transform: translate(-50%, -55%);
-    box-shadow: 0px 0px 25px;
+    /* box-shadow: 0px 0px 25px; */
     background-color: #FEF6F3;
+}
+
+.NAME_LOGO_INFO {
+    width: 780px;
+    height: 688px;
+    position: fixed; top: 50%; left: 50%;
+    transform: translate(-50%, -55%);
+    /* box-shadow: 0px 0px 25px; */
+    background-color: #FEF6F3;
+
+    position: absolute;
+    top:  50%;
+    left: 50%;
+    transform: translate(-50%,-50%);
 }
 
 .Name-logo {
@@ -25,17 +40,25 @@ body {
 }
 
 .Name-logo a {
-    margin: 24px 0 0 0px;
+    margin: 30px 0 0 0px;
+    padding-left: 25px;
 }
 
 .Name-logo-img1 {
-    margin: 25px 0 0 440px;
+    margin: 33px 0 0 280px;
+}
+
+.Name-logo-img1-info {
+    margin: 17px 0 0 435px;
 }
 
 .Name-logo-img {
-    margin: 26px 0 0 -33px;
+    margin: 41px 0 0 -57px;
 }
 
+.Name-logo-img-info {
+    margin: 35px 0 0 -57px;
+}
 
 .name {
     margin: 60px 0 0 70px;
@@ -47,8 +70,8 @@ body {
     font-family: 'Inter';
     font-style: normal;
     font-weight: 400;
-    font-size: 16px;
-    line-height: 24px;
+    font-size: 12px;
+    line-height: 16px;
 }
 
 .label {
@@ -56,22 +79,30 @@ body {
     font-family: 'Inter';
     font-style: normal;
     font-weight: 400;
-    font-size: 24px;
-    line-height: 32px;
+    font-size: 20px;
+    line-height: 24px;
 }
 
 .text-input {
-    margin: 40px 0 0 0;
-    width: 580px;
+    margin: 15px 0 0 0;
+    width: 388px;
     height: 48px;
+    border: 1px solid #000000;
+    border-radius: 10px;
+    padding-left: 30px;
 }
+
+.text-input, .text-input::before, .text-input::after {
+    box-size: border-box;
+}
+
 .button {
     text-align: center;
 }
 .submit_button {
     background: #FBC815;
     border-radius: 50px;
-    width: 267px;
+    width: 218px;
     height: 56px;
     font-family: 'Inter';
     font-style: normal;
@@ -96,8 +127,8 @@ body {
     font-style: normal;
     font-weight: 700;
     font-size: 32px;
-    line-height: 36px;
-    margin: 35px 0 35px 0;
+    line-height: 40px;
+    margin: 55px 0 35px 0;
 }
 
 .info-li {
@@ -105,12 +136,12 @@ body {
 }
 
 .info ul {
-    margin: 0 0 25px 100px;
+    margin: 63px 0 65px 100px;
     width: 580px;
     height: 190px;
     font-family: 'Inter';
     font-style: normal;
     font-weight: 400;
     font-size: 24px;
-    line-height: 27px;
+    line-height: 32px;
 }
