--- a/templates/name.html
+++ b/templates/name.html
@@ -7,18 +7,22 @@
     <link href="./static/css/name.css" rel="stylesheet" type="text/css">
     <link href="./static/css/fonts.css" rel="stylesheet" type="text/css">
     <link rel="icon" sizes="16x16" href="./static/img/Иконка _Лого_ (1_1).svg" type="image/x-icon">
-    <title>Dandelions</title>
+    <style>
+        @import url('https://fonts.googleapis.com/css2?family=Inter:wght@100;200;300;400;500;600;700;800;900&display=swap');
+        @import url('https://fonts.googleapis.com/css2?family=Inter:wght@100;200;300;400;500;600;700;800;900&family=Work+Sans:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
+    </style>
+    <title>Vorobeyenglish</title>
 </head>
 <body>
     <form class="NAME_LOGO" action="./next_test" method="post">
         <div class="Name-logo">
-            <img src="./static/img/Иконка _Лого_ (1).svg">
+            <a href="./"><img src="./static/img/Иконка _Лого_ (1).svg"></a>
             <img class="Name-logo-img1" src="./static/img/Ellipse 6 (2).svg">
             <a href="./"><img class="Name-logo-img" src="./static/img/Vector (5).svg"></a>
         </div>
         <div class="name">
             <label class="label">Введите своё имя, чтобы мы знали, как к<br> Вам обращаться
-            <input required="" name="name" class="text-input" type="text" maxlength="255" minlength="2" placeholder="    Имя"></label>
+            <input required="" name="name" class="text-input" type="text" maxlength="255" minlength="2" placeholder="Имя"></label>
             <p>0 из 255 символов (минимум 2)</p>
         </div>
         <div class="button">
