--- a/templates/next_test.html
+++ b/templates/next_test.html
@@ -6,12 +6,13 @@
     <meta name="viewport" content="width=\, initial-scale=1.0">
     <link href="./static/css/name.css" rel="stylesheet" type="text/css">
     <link href="./static/css/fonts.css" rel="stylesheet" type="text/css">
-    <title>Document</title>
+    <link rel="icon" sizes="16x16" href="./static/img/Иконка _Лого_ (1_1).svg" type="image/x-icon">
+    <title>Vorobeyenglish</title>
 </head>
 <body>
     <form class="NAME_LOGO" action="./test" method="post">
         <div class="Name-logo">
-            <img src="./static/img/Иконка _Лого_ (1).svg">
+            <a href="./"><img src="./static/img/Иконка _Лого_ (1).svg"></a>
             <img class="Name-logo-img1" src="./static/img/Ellipse 6 (2).svg">
             <a href="./"><img class="Name-logo-img" src="./static/img/Vector (5).svg"></a>
         </div>
