--- a/templates/next_test.html
+++ b/templates/next_test.html
@@ -10,11 +10,11 @@
     <title>Vorobeyenglish</title>
 </head>
 <body>
-    <form class="NAME_LOGO" action="./test" method="post">
+    <form class="NAME_LOGO_INFO" action="./test" method="post">
         <div class="Name-logo">
             <a href="./"><img src="./static/img/Иконка _Лого_ (1).svg"></a>
-            <img class="Name-logo-img1" src="./static/img/Ellipse 6 (2).svg">
-            <a href="./"><img class="Name-logo-img" src="./static/img/Vector (5).svg"></a>
+            <img class="Name-logo-img1-info" src="./static/img/Ellipse 6 (2).svg">
+            <a href="./"><img class="Name-logo-img-info" src="./static/img/Vector (5).svg"></a>
         </div>
         <div class="info">
             <p>Добро пожаловать!<br>Вы собираетесь начать тест</p>
