Добавлено определение браузера платформы, исправлен ip и css

--- a/templates/Index.html
+++ b/templates/Index.html
@@ -170,10 +170,11 @@
                 <div class="test-now">
                     <div class="test-now-text">
                         <h1 class="title_3">Протестируйте свой английский<br> прямо сейчас</h1>
-                        <form href="">
+
+                        <form href="" action="./name">
                             <button class="button test_button">Пройти тест</button>
                         </form>
-                        <!-- <button class="button test_button" type="submit">Пройти тест</button> -->
+
                     </div>
                     <div class="test-now-img">
                         <img src="./static/img/Group 78 1 (1).svg">
@@ -197,30 +198,13 @@
                         <li><a class="footer-link" href="#ADVAN_TEST">Преимущества теста</a></li>
                         <li><a class="footer-link" href="#LANGUAGE_LEVELS">Уровни знания языка</a></li>
                         <li><a class="footer-link" href="#FOOTER">Свяжитесь с нами</a></li>
+                        <li><a class="footer-link" href="#">О проекте</a></li>
                     </ul>
                 </nav>
-                <p><a class="footer-link" href="mailto:englishtest@yandex.ru">englishtest@yandex.ru</a></p>
             </div>
 
         </div>
     </div>
 </footer>
 </body>
-<!-- <script>
-const goTopBtn = document.querySelector(".button");
-
-goTopBtn.addEventListener("click", goTop);
-
-function goTop() {
-
-  if (window.pageYOffset > 0) {
-    window.scrollBy(0, -10); // второй аргумент - скорость
-    setTimeout(goTop, 0); // входим в рекурсию
-  }
-}
-
-$(function() {
-
-});
-</script> -->
 </html>
