--- a/templates/test.html
+++ b/templates/test.html
@@ -40,7 +40,7 @@
         <div class="level-2">
             <div class="level">
                 <img src="./static/img/Ellipse 15.svg" alt="Result">
-                <p>15</p>
+                <p>{{.Point}}</p>
             </div>
             <div class="lavel-1">
                 <p>{{.Level}}</p>
@@ -55,7 +55,6 @@
                 <div class="share-img">
                     <a href="https://vk.com/" target="_blank"><img src="./static/img/VK.svg" alt="VK"></a>
                     <a href="https://ok.ru/" target="_blank"><img src="./static/img/odnoklassniki 1.svg" alt="odnoklassniki"></a>
-                    <!-- <img src="./static/img/instagram3 1.svg" alt="instagram"> -->
                 </div>
             </div>
         </div>
@@ -119,10 +118,9 @@
     </div>
 </main>
 <footer class="FOOTER">
-    <div class="section">
-        <div class="section-footer">
+    <div class="section-footer">
             <div class="footer-logo">
-                <img src="./static/img/Vector (3).svg">
+                <a href="./"><img src="./static/img/Vector (3).svg"></a>
                 <p class="footer-logo-p">© Vorobey English 2023</p>
                 <p class="footer-logo-p2">Все права защищены</p>
             </div>
@@ -132,12 +130,10 @@
                         <li><a class="footer-link" href="#HOME">Преимущества теста</a></li>
                         <li><a class="footer-link" href="#HOME">Уровни знания языка</a></li>
                         <li><a class="footer-link" href="#HOME">Свяжитесь с нами</a></li>
+                        <li><a class="footer-link" href="#">О проекте</a></li>
                     </ul>
                 </nav>
-                <p><a class="footer-link" href="mailto:englishtest@yandex.ru">englishtest@yandex.ru</a></p>
             </div>
-
-        </div>
     </div>
 </footer>
 
