--- a/static/css/name.css
+++ b/static/css/name.css
@@ -61,7 +61,7 @@ body {
 }
 
 .name {
-    margin: 60px 0 0 70px;
+    margin: 60px 0 60px 70px;
 }
 
 .name p {
@@ -93,7 +93,7 @@ body {
 }
 
 .text-input, .text-input::before, .text-input::after {
-    box-size: border-box;
+    box-sizing: border-box;
 }
 
 .button {
