--- a/templates/Index.html
+++ b/templates/Index.html
@@ -189,15 +189,15 @@
         <div class="section-footer">
             <div class="footer-logo">
                 <img src="./static/img/Vector (3).svg">
-                <p class="footer-logo-p">© Vorobey English 2023</p>
-                <p class="footer-logo-p2">Все права защищены</p>
+                <p class="footer-logo-p">Image by www.freepik.com</p>
+                <p class="footer-logo-p2">© Vorobey English 2023. Все права защищены</p>
             </div>
             <div class="footer-navi">
                 <nav>
                     <ul class="footer-nav">
                         <li><a class="footer-link" href="#ADVAN_TEST">Преимущества теста</a></li>
                         <li><a class="footer-link" href="#LANGUAGE_LEVELS">Уровни знания языка</a></li>
-                        <li><a class="footer-link" href="#FOOTER">Свяжитесь с нами</a></li>
+                        <li><a class="footer-link" href="mailto:englishtest@yandex.ru">Свяжитесь с нами</a></li>
                         <li><a class="footer-link" href="#">О проекте</a></li>
                     </ul>
                 </nav>
