--- a/templates/name.html
+++ b/templates/name.html
@@ -22,7 +22,7 @@
         </div>
         <div class="name">
             <label class="label">Введите своё имя, чтобы мы знали, как к<br> Вам обращаться
-            <input required="" name="name" class="text-input" type="text" maxlength="255" minlength="2" placeholder="Ваше имя" pattern="[A-Za-zА-Яа-яЁё]{2,}" title="Введите русские или латинские символы. Не менее 2 символов"></label>
+            <input required="" name="name" class="text-input" type="text" maxlength="255" minlength="2" placeholder="Ваше имя" pattern="^[А-Яа-яЁё\s a-zA-Z]+$" title="Введите русские или латинские символы. Не менее 2 символов"></label>
             <!-- <p>0 из 255 символов (минимум 2)</p> -->
         </div>
         <div class="button">
