--- a/static/css/test.css
+++ b/static/css/test.css
@@ -124,14 +124,20 @@
     font-weight: 700;
     font-size: 20px;
     line-height: 24px;
+    padding-bottom: 25px;
 }
 
 .share-img {
     display: flex;
+    padding: 25px 0px 0 0;
 }
 
 .share-img img {
     margin: 16px 30px 0 0;
+}
+
+.ya-share2 {
+    margin: 25px 52px 0 0;
 }
 
 .appeal {
