--- a/templates/Index.html
+++ b/templates/Index.html
@@ -21,7 +21,7 @@
                 <ul class="header-nav">
                     <li><a class="link" href="#ADVAN_TEST">Преимущества теста</a></li>
                     <li><a class="link" href="#LANGUAGE_LEVELS">Уровни знания языка</a></li>
-                    <li><a class="link" href="#FOOTER">Свяжитесь с нами</a></li>
+                    <li><a class="link" href="mailto:englishtest@yandex.ru">Свяжитесь с нами</a></li>
                     <li><a class="link" href="#">О проекте</a></li>
                 </ul>
             </nav>
