Фиксация перел слиянием

--- a/templates/test.html
+++ b/templates/test.html
@@ -82,7 +82,7 @@
 
     <form class="quiz-box" id="quiz" action="./test" method="post">
         <div class="quiz-header">
-            <p class="set">1/60</p>
+            <p class="set">{{.NumberTest}}/60</p>
             <h2 id="question">{{.Question}}</h2>
             <ul>
                 <li>
