Добавлена проверка ввода имени на пробел, удален name.html

--- a/templates/Index.html
+++ b/templates/Index.html
@@ -48,7 +48,7 @@
                             <li class="home_li"><img class="check" src="./static/img/Иконка _Галочка_ 3.svg">По международным стандартам</li>
                         </ul>
                         <div class="buttonsHome">
-                            <form action="./name">
+                            <form action="./next_test" method="post">
                                 <button class="button_home">Пройти тест</button>
                             </form>
                         </div>
@@ -171,7 +171,7 @@
                     <div class="test-now-text">
                         <h1 class="title_3">Протестируйте свой английский<br> прямо сейчас</h1>
 
-                        <form href="" action="./name">
+                        <form action="./next_test" method="post">
                             <button class="button test_button">Пройти тест</button>
                         </form>
 
