--- a/templates/next_test.html
+++ b/templates/next_test.html
@@ -10,6 +10,9 @@
     <title>Vorobeyenglish</title>
 </head>
 <body>
+
+{{if .Available}}
+
     <form class="NAME_LOGO_INFO" action="./test" method="post">
         <div class="Name-logo">
             <a href="./"><img src="./static/img/Иконка _Лого_ (1).svg"></a>
@@ -32,6 +35,26 @@
             <button class="button submit_button">Продолжить</button>         
         </div>
     </form>
+
+{{else}}
+
+<form class="NAME_LOGO" action="./next_test" method="post">
+    <div class="Name-logo">
+        <a href="./"><img src="./static/img/Иконка _Лого_ (1).svg"></a>
+        <img class="Name-logo-img1" src="./static/img/Ellipse 6 (2).svg">
+        <a href="./"><img class="Name-logo-img" src="./static/img/Vector (5).svg"></a>
     </div>
+    <div class="name">
+        <label class="label">Введите своё имя, чтобы мы знали, как к<br> Вам обращаться
+            <input required="" name="name" class="text-input" type="text" maxlength="255" minlength="2" placeholder="Ваше имя" pattern="^[А-Яа-яЁё\s a-zA-Z]+$" title="Введите русские или латинские символы. Не менее 2 символов"></label>
+        <!-- <p>0 из 255 символов (минимум 2)</p> -->
+    </div>
+    <div class="button">
+        <button class="button submit_button">Продолжить</button>
+    </div>
+</form>
+
+{{end}}
+
 </body>
 </html>
