--- a/static/css/test.css
+++ b/static/css/test.css
@@ -10,7 +10,7 @@
 }
 
 .quiz-box {
-    padding: 116px 0 0 135px;
+    padding: 146px 0 0 135px;
 }
 
 .quiz-header ul {
@@ -34,10 +34,6 @@
 
 .quiz-header h2 {
     margin-bottom: 40px;
-}
-
-.set {
-    padding: 0 0 30px 0;
 }
 
 .button-test {
@@ -81,6 +77,7 @@
 .result1 {
     display: flex;
     justify-content: space-around;
+    padding: 0 92px 0 166px;
 }
 
 .info-result-p {
@@ -90,7 +87,7 @@
     font-style: normal;
     font-size: 24px;
     line-height: 32px;
-}
+    }
 
 .level {
     margin-left: 45px;
@@ -105,9 +102,9 @@
     line-height: 48px;
 }
 
-.level-2 {
+/* .level-2 {
     margin-left: 220px;
-}
+} */
 
 .lavel-1 {
     font-family: 'Work Sans';
@@ -116,7 +113,7 @@
     font-weight: 700;
     font-size: 36px;
     line-height: 48px;
-}
+    }
 
 .share {
     position: absolute;
@@ -128,7 +125,6 @@
     font-weight: 700;
     font-size: 20px;
     line-height: 24px;
-    padding-bottom: 25px;
 }
 
 .share-img {
@@ -136,23 +132,17 @@
 }
 
 .share-img img {
-    margin: 16px 30px 0 0;
+    /* margin: 16px 30px 0 0; */
+    padding: 16px 30px 0 0;
 }
 
-.ya-share2 {
-    margin: 5px 52px 0 0;
-}
-
-.ya-share2__link {
-    margin: 0 20px 0 20px;
-}
 .appeal {
     display: flex;
     justify-content: space-between;
     background-size: 100%;
     background-color: #FDE4D3;
     padding-top: 75px;
-    padding: 70px 0 0 195px;
+    padding: 70px 195px 0 195px;
     margin-top: 165px;
 }
 
@@ -185,7 +175,7 @@
 }
 
 .appeal img {
-    margin-right: 180px;
+    /* margin-right: 180px; */
     padding-top: 20px;
 }
 
