--- a/templates/info-customer.html
+++ b/templates/info-customer.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link href="./static/css/vorobey.css" rel="stylesheet" type="text/css">
     <link href="./static/css/style.css" rel="stylesheet" type="text/css">
     <link href="./static/css/test.css" rel="stylesheet" type="text/css">
     <link href="./static/css/fonts.css" rel="stylesheet" type="text/css">
@@ -29,7 +30,68 @@
     </div>
 </header>
 <main>
-   
+    <section class="PROECT_VOROBEY">
+        <div class="section">
+            <div class="content1">
+                <h2 class="vorobey-p">Проект Vorobey english</h2>
+                <div class="vorobey-bloc1">
+                    <div class="vorobey">
+                        <div class="foto-vorobey">
+                            <img src="./static/img/,,.svg">
+                            <p>«Hello, dears!<br> My name is Nastya! <br>I’m really happy to see you there! <br>Буду рада видеть тебя на своих занятиях! <br>See ya!»</p>
+                        </div>
+                        <img src="./static/img/Group 88 2 1.svg">
+                    </div>
+                    <div class="help_vorobey">
+                        <div class="help-p">
+                            <p class="help-p1">Наш проект создан командой различных специалистов, но в первую очередь это наш педагог английского языка Анастасия.</p>
+                            <p class="help-p1 help-p-z">Работа по индивидуальной программе, которая тщательно подготавливается для каждого ученика, план отправляется перед первым занятием, со всеми материалами и необходимыми источниками. (учебные пособия, грамматические пособия и др.)</p>
+                        </div>
+                            <ul class="help-p1">
+                                <li>Анастасия работает репетитором по английскому языку уже 4 года!</li>
+                                <li>Работает переводчицей с английского языка </li>
+                                <li>Имеет сертификаты языковых школ, неоднократно участвовала в конференциях на английском языке, пишет и публикует научные статьи на английском (так же может помочь и подсказать Вам в этом направлении работы)</li>
+                            </ul>
+                            <p class="help-p2">Если Вы хотите начать обучение, или если есть вопросы к педагогу, оставьте заявку</p>
+                            <form action="#"  class="help_button">
+                                <div class="help-button-test">
+                                    <button type="submit" class="help_test_button" id="">Оставить заявку</button>
+                                </div>
+                            </form>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+    <section class="WHAT_HELP">
+        <div class="section">
+            <div class="what-content">
+                <h2 class="vorobey-p">Чем я могу быть Вам полезна?</h2>
+                <div class="what-info">
+                    <p>По результатам моей работы все мои школьники подтянули свою успеваемость и вышли на отличные оценки в четверти, успешно сдают ОГЭ и ЕГЭ. Со школьниками, по желанию самого учащегося и родителей мы так же готовимся к международным экзаменам YLE, FCE.</p>
+                    <img class="number1" src="./static/img/01.png" alt="number">
+                </div>
+                <div class="what-info">                    
+                    <img class="number2" src="./static/img/02.png" alt="number">
+                    <p>Со студентами мы регулярно работаем над повышением собственных скиллов в английском языке, и как результат успешно сдаем и закрываем зачеты и экзамены по предмету. Так же помогаю студентам в написании научных статей и работ на английском языке, помогаю и курирую в подготовке к конференциям.</p>
+
+                </div>
+                <div class="what-info">
+                    <p>Со взрослыми мы прежде всего устанавливаем цели и потребности от языка. Многим он необходим для путешествий, работы или для собственных возможностей и улучшения, изучения нового языка или материала. У меня успешный опыт работы с программистами, а так же студентами, которые хотели поменять род деятельности и им необходим был английский язык. Помогаю в написании CV на английском языке, прохождении интервью в компании.</p>
+                    <img class="number1" src="./static/img/03.png" alt="number">
+                </div>
+                <div class="what-info">                    
+                    <img class="number2" src="./static/img/04.png" alt="number">
+                    <p>Являюсь студенткой 4 курса по направлениям: прикладная лингвистика, переводоведение, углубленное профессиональное изучение английского языка. В своем институте неоднократно проводила English Club для студентов (вид внеучебной деятельности). В школьном возрасте ездила по обмену и училась в Бристоле, Великобритания. За моей спиной успешная сдача IELTS General на 7.5 в 2019 году, сейчас активно готовлюсь к CAE and IELTS Academic.</p>
+                </div>
+                <form action="#"  class="help_button">
+                    <div class="help-button-test2">
+                        <button type="submit" class="help_test_button" id="">Оставить заявку</button>
+                    </div>
+                </form>
+            </div>
+        </div>
+    </section>
 </main>
 <footer class="FOOTER">
     <div class="section-footer">
