--- a/templates/next_test.html
+++ b/templates/next_test.html
@@ -27,7 +27,7 @@
 
             <ul>
                 <li>Тест содержит 60 вопросов с возможностью выбора 1 правильного ответа из 4-х.</li>
-                <li class="info-li">Время на выполнения теста не ограничено.</li>
+                <li class="info-li">Время на выполнение теста не ограничено.</li>
                 <li>В конце Вы получите результат прохождения теста.</li>
             </ul>
         </div>
@@ -45,7 +45,7 @@
         <a href="./"><img class="Name-logo-img" src="./static/img/Vector (5).svg"></a>
     </div>
     <div class="name">
-        <label class="label">Введите своё имя, чтобы мы знали, как к<br> Вам обращаться
+        <label class="label">Введите своё имя, чтобы мы знали как к<br> Вам обращаться
             <input required="" name="name" class="text-input" type="text" maxlength="255" minlength="2" placeholder="Ваше имя" pattern="^[А-Яа-яЁё\s a-zA-Z]+$" title="Введите русские или латинские символы. Не менее 2 символов"></label>
         <!-- <p>0 из 255 символов (минимум 2)</p> -->
     </div>
