--- a/templates/info-customer.html
+++ b/templates/info-customer.html
@@ -53,7 +53,7 @@
                                 <li>Имеет сертификаты языковых школ, неоднократно участвовала в конференциях на английском языке, пишет и публикует научные статьи на английском (так же может помочь и подсказать Вам в этом направлении работы)</li>
                             </ul>
                             <p class="help-p2">Если Вы хотите начать обучение, или если есть вопросы к педагогу, оставьте заявку</p>
-                            <form action="#"  class="help_button">
+                            <form action="./connection"  class="help_button" method="post">
                                 <div class="help-button-test">
                                     <button type="submit" class="help_test_button" id="">Оставить заявку</button>
                                 </div>
