--- a/templates/test.html
+++ b/templates/test.html
@@ -64,10 +64,14 @@
             <p><span style="font-weight: 600;">{{.User}}</span>, если Вы хотите прокачать свой английский на 2-3 уровня, Вы можете обратиться
                 к преподавателю проекта Vorobey English <span style="font-weight: 600;">Анастасии</span>. </p>
             <div class="button-test">
-                <button class="button test_button" id="submit" href="./info-customer.html">Узнать подробнее</button>
+                <form action="./info-customer" method="get">
+                <button class="button test_button" id="submit">Узнать подробнее</button>
+                </form>
             </div>
             <div class="button-test">
-                <button class="button test_button" id="application" href="./connection.html">Оставить заявку</button>
+                <form action="./connection" method="post">
+                <button class="button test_button" id="application">Оставить заявку</button>
+                </form>
             </div>
         </div>
         <div>
