--- a/templates/connection.html
+++ b/templates/connection.html
@@ -15,11 +15,11 @@
 </head>
 <body>
 
-    <form class="CONNECTION" action="./next_test.html" method="get">
+    <form class="CONNECTION" action="./connection" method="post">
         <div class="Name-logo-conn">
-            <a href="Index.html"><img src="./static/img/Иконка _Лого_ (1).svg"></a>
+            <a href="./"><img src="./static/img/Иконка _Лого_ (1).svg"></a>
             <img class="Name-logo-img1-conn" src="./static/img/Ellipse 6 (2).svg">
-            <a href="./Index.html"><img class="Name-logo-img-conn" src="./static/img/Vector (5).svg"></a>
+            <a href="./"><img class="Name-logo-img-conn" src="./static/img/Vector (5).svg"></a>
         </div>
         <div class="info-conn">
             <div class="name">
